--- a/index.html
+++ b/index.html
@@ -405,16 +405,15 @@
                 <h3 class="font-display text-xl">Sculpted Chair</h3>
                 <span class="font-bold text-primary">$450</span>
               </div>
-              <p class="text-sm text-slate-500 dark:text-slate-400 mb-6">
-                Hand-carved from a single piece of wood, blending natural form
-                with modern function.
-              </p>
-              <a
-                href="product.html"
-                class="block w-full py-3 border border-slate-200 dark:border-white/10 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white hover:border-primary transition-all text-center"
-              >
-                View Details
-              </a>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
+                            Hand-carved from a single piece of wood, blending natural form with modern function.
+                        </p>
+                        <a
+                            href="product-detail.html?id=sculpted-chair"
+                            class="block w-full py-3 border border-slate-200 dark:border-white/10 rounded-lg text-sm font-semibold hover:bg-primary hover:text-white hover:border-primary transition-all text-center"
+                        >
+                            View Details
+                        </a>
             </div>
 
             <div
