--- a/shop.html
+++ b/shop.html
@@ -134,9 +134,14 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             A rustic-modern sofa made with solid wood and soft cushions, perfect for relaxing.
                         </p>
-                        <button onclick="openWhatsApp('Cozy Log Sofa - $1,202')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=cozy-log-sofa" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Cozy Log Sofa - $1,202')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
                 
@@ -156,9 +161,14 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             Hand-carved from a single piece of wood, blending natural form with modern function.
                         </p>
-                        <button onclick="openWhatsApp('Sculpted Chair - $450')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=sculpted-chair" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Sculpted Chair - $450')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
                 
@@ -178,9 +188,14 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             A uniquely upholstered armchair with a charming, vintage-inspired design.
                         </p>
-                        <button onclick="openWhatsApp('Patch Armchair - $890')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=patch-armchair" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Patch Armchair - $890')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -200,16 +215,21 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             Elegant solid wood dining table with clean lines, perfect for family gatherings.
                         </p>
-                        <button onclick="openWhatsApp('Modern Dining Table - $1,850')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=modern-dining-table" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Modern Dining Table - $1,850')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Product 5: Minimalist Bookshelf -->
                 <div class="group bg-white dark:bg-surface-dark rounded-2xl overflow-hidden shadow-sm hover:shadow-xl transition-all duration-300 border border-gray-100 dark:border-gray-800">
                     <div class="h-64 overflow-hidden bg-gray-50 dark:bg-black/20 flex items-center justify-center p-6 relative">
-                        <img alt="Minimalist Bookshelf" class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-500" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCqoxZKyd0-78zEpC6KPpy5-6P20wb8sTXItRNd4BOyY49gddKCF3xm2NK9SAORAMNRr1twYv1UYI4S32fTdYRCUdv1XcOrmLC0lnN__iZJDUTd6imgQufw1fcxUMkrtkK8Br-81AshM1jYb_0E2W_lc8XZaMXiVtEEHXOwfZdjQuKLNfffCcTUMU6HIGrsVpmLYnQeTbrKV-lFzyNGlC4clXJWwaYfwAyY8lfiy9SoQ6uJgq5BqYIoMpDLisUxEOxcjfwuRkcbjvk"/>
+                        <img alt="Minimalist Bookshelf" class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-500" src="/home/fatah/.gemini/antigravity/brain/33a722f2-403e-436f-9096-b783ce579006/minimalist_bookshelf_1770735778497.png"/>
                         <div class="absolute top-4 right-4 bg-white dark:bg-surface-dark rounded-full p-2 shadow-sm opacity-0 group-hover:opacity-100 transition-opacity">
                             <span class="material-symbols-outlined text-primary text-sm">favorite</span>
                         </div>
@@ -222,9 +242,14 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             Sleek and functional bookshelf with open shelving for displaying your favorite items.
                         </p>
-                        <button onclick="openWhatsApp('Minimalist Bookshelf - $680')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=minimalist-bookshelf" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Minimalist Bookshelf - $680')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -244,9 +269,14 @@
                         <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 line-clamp-2 h-10">
                             Premium solid wood bed frame with elegant headboard design for ultimate comfort.
                         </p>
-                        <button onclick="openWhatsApp('Luxury Bed Frame - $2,450')" class="w-full py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-gray-900 hover:text-white dark:hover:bg-white dark:hover:text-black transition-colors font-medium text-sm">
-                            Order via WhatsApp
-                        </button>
+                        <div class="flex gap-2">
+                            <a href="product-detail.html?id=luxury-bed-frame" class="flex-1 py-3 border border-gray-200 dark:border-gray-700 text-gray-900 dark:text-white rounded-lg hover:bg-primary hover:text-white hover:border-primary transition-colors font-medium text-sm text-center">
+                                View Details
+                            </a>
+                            <button onclick="openWhatsApp('Luxury Bed Frame - $2,450')" class="flex-1 py-3 bg-primary text-white rounded-lg hover:bg-primary-dark transition-colors font-medium text-sm">
+                                Order
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
