--- a/article-1.html
+++ b/article-1.html
@@ -239,7 +239,7 @@
         <img
           alt="Soto Lamongan"
           class="w-full h-[400px] md:h-[500px] object-cover"
-          src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/soto_lamongan_1770230836619.png"
+          src="images/soto-lamongan.png"
         />
       </div>
 
@@ -270,7 +270,7 @@
           <img
             alt="Soto Lamongan"
             class="w-full h-auto object-cover"
-            src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/soto_lamongan_1770230836619.png"
+            src="images/soto-lamongan.png"
           />
         </div>
 
@@ -298,9 +298,9 @@
 
         <div class="my-8 rounded-xl overflow-hidden">
           <img
-            alt="Nasi Boran"
+            alt="Nasi Boran Lamongan"
             class="w-full h-auto object-cover"
-            src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/nasi_boran_1770230853135.png"
+            src="https://images.unsplash.com/photo-1512058564366-18510be2db19?w=800&h=600&fit=crop"
           />
         </div>
 
@@ -331,7 +331,7 @@
           <img
             alt="Tahu Campur Lamongan"
             class="w-full h-auto object-cover"
-            src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/tahu_campur_lamongan_1770230869694.png"
+            src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?w=800&h=600&fit=crop"
           />
         </div>
 
@@ -432,7 +432,7 @@
               <img
                 alt="Nasi Krawu Gresik"
                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105"
-                src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/nasi_krawu_gresik_1770230887440.png"
+                src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d?w=1200&h=800&fit=crop"
               />
             </div>
             <h4
