--- a/article-2.html
+++ b/article-2.html
@@ -176,7 +176,7 @@
 
         <!-- Featured Image -->
         <div class="mb-12 rounded-2xl overflow-hidden">
-            <img alt="Nasi Krawu Gresik" class="w-full h-[400px] md:h-[500px] object-cover" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/nasi_krawu_gresik_1770230887440.png"/>
+            <img alt="Nasi Krawu Gresik" class="w-full h-[400px] md:h-[500px] object-cover" src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d?w=1200&h=800&fit=crop"/>
         </div>
 
         <!-- Article Content -->
@@ -191,7 +191,7 @@
             </p>
 
             <div class="my-8 rounded-xl overflow-hidden">
-                <img alt="Nasi Krawu Gresik" class="w-full h-auto object-cover" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/nasi_krawu_gresik_1770230887440.png"/>
+                <img alt="Nasi Krawu Gresik" class="w-full h-auto object-cover" src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d?w=1200&h=800&fit=crop"/>
             </div>
 
             <ul>
@@ -226,7 +226,7 @@
             </p>
 
             <div class="my-8 rounded-xl overflow-hidden">
-                <img alt="Pudding Gresik" class="w-full h-auto object-cover" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/pudding_gresik_1770230903155.png"/>
+                <img alt="Pudding Gresik" class="w-full h-auto object-cover" src="https://images.unsplash.com/photo-1488477181946-6428a0291777?w=800&h=600&fit=crop"/>
             </div>
 
             <ul>
@@ -286,7 +286,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <a href="article-1.html" class="group">
                     <div class="relative h-48 rounded-xl overflow-hidden mb-4">
-                        <img alt="Soto Lamongan" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/soto_lamongan_1770230836619.png"/>
+                        <img alt="Soto Lamongan" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="images/soto-lamongan.png"/>
                     </div>
                     <h4 class="text-xl font-display font-medium text-gray-900 dark:text-white mb-2 group-hover:text-primary transition-colors">
                         Menelusuri Jejak Lezat Kuliner Khas Lamongan
