--- a/blog.html
+++ b/blog.html
@@ -120,7 +120,7 @@
                 <article class="group cursor-pointer">
                     <a href="article-1.html">
                         <div class="relative h-[350px] rounded-2xl overflow-hidden mb-6">
-                            <img alt="Soto Lamongan" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/soto_lamongan_1770230836619.png"/>
+                            <img alt="Soto Lamongan" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="images/soto-lamongan.png"/>
                             <div class="absolute inset-0 bg-black/10 group-hover:bg-black/20 transition-colors duration-300"></div>
                             <div class="absolute top-4 left-4 bg-white/90 backdrop-blur-md px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider text-primary shadow-sm">
                                 Kuliner & Budaya
@@ -140,7 +140,7 @@
                 <article class="group cursor-pointer">
                     <a href="article-2.html">
                         <div class="relative h-[350px] rounded-2xl overflow-hidden mb-6">
-                            <img alt="Nasi Krawu Gresik" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="/home/fatah/.gemini/antigravity/brain/8eadba15-9469-46d7-8033-faa5ecb5055d/nasi_krawu_gresik_1770230887440.png"/>
+                            <img alt="Nasi Krawu Gresik" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d?w=1200&h=800&fit=crop"/>
                             <div class="absolute inset-0 bg-black/10 group-hover:bg-black/20 transition-colors duration-300"></div>
                             <div class="absolute top-4 left-4 bg-white/90 backdrop-blur-md px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider text-primary shadow-sm">
                                 Kuliner & Budaya
