--- a/product-detail.html
+++ b/product-detail.html
@@ -385,6 +385,60 @@
                     '/home/fatah/.gemini/antigravity/brain/33a722f2-403e-436f-9096-b783ce579006/minimalist_bookshelf_1770735778497.png',
                     '/home/fatah/.gemini/antigravity/brain/33a722f2-403e-436f-9096-b783ce579006/minimalist_bookshelf_1770735778497.png'
                 ]
+            },
+            'modern-dining-table': {
+                name: 'Modern Dining Table',
+                price: '$1,850',
+                description: 'An elegant solid wood dining table featuring clean straight lines and a contemporary minimalist design. Perfect for family gatherings and dinner parties, this table combines functionality with timeless beauty.',
+                features: [
+                    'Solid walnut wood construction',
+                    'Seats 6-8 people comfortably',
+                    'Smooth lacquered finish',
+                    'Sturdy and stable design',
+                    'Easy to clean surface',
+                    'Timeless modern aesthetic'
+                ],
+                specs: {
+                    'Material': 'Solid Walnut Wood',
+                    'Dimensions': '72"L x 36"W x 30"H',
+                    'Weight': '120 lbs',
+                    'Color': 'Dark Walnut',
+                    'Assembly': 'Minimal assembly required',
+                    'Warranty': '5 years'
+                },
+                images: [
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuDwAgkd_KbXH5JZ6ac8SZwy9xCNVpMjVcm-QJ1oeFe6z-PDe3exBdnxUdlWdbIMn9jt-8zEf43lKClVW_fxrp-4nWi5tzcO8QUJW47C1YV-ERzDSZ382n7r1vVDPnljyudxru9efMdyWLCvK7o8ULmR3SL3x1-oJtEY37Mnc4wXv-PUD1ZUEwT-z0IMQ-j62pI4OiyrK_tY6egZazQAUI9x0l7hu9g7NWEF4_a4rvir22G5GuhOeIeDYjPbO5zKD87T49uYeqllNv4',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuDwAgkd_KbXH5JZ6ac8SZwy9xCNVpMjVcm-QJ1oeFe6z-PDe3exBdnxUdlWdbIMn9jt-8zEf43lKClVW_fxrp-4nWi5tzcO8QUJW47C1YV-ERzDSZ382n7r1vVDPnljyudxru9efMdyWLCvK7o8ULmR3SL3x1-oJtEY37Mnc4wXv-PUD1ZUEwT-z0IMQ-j62pI4OiyrK_tY6egZazQAUI9x0l7hu9g7NWEF4_a4rvir22G5GuhOeIeDYjPbO5zKD87T49uYeqllNv4',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuDwAgkd_KbXH5JZ6ac8SZwy9xCNVpMjVcm-QJ1oeFe6z-PDe3exBdnxUdlWdbIMn9jt-8zEf43lKClVW_fxrp-4nWi5tzcO8QUJW47C1YV-ERzDSZ382n7r1vVDPnljyudxru9efMdyWLCvK7o8ULmR3SL3x1-oJtEY37Mnc4wXv-PUD1ZUEwT-z0IMQ-j62pI4OiyrK_tY6egZazQAUI9x0l7hu9g7NWEF4_a4rvir22G5GuhOeIeDYjPbO5zKD87T49uYeqllNv4',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuDwAgkd_KbXH5JZ6ac8SZwy9xCNVpMjVcm-QJ1oeFe6z-PDe3exBdnxUdlWdbIMn9jt-8zEf43lKClVW_fxrp-4nWi5tzcO8QUJW47C1YV-ERzDSZ382n7r1vVDPnljyudxru9efMdyWLCvK7o8ULmR3SL3x1-oJtEY37Mnc4wXv-PUD1ZUEwT-z0IMQ-j62pI4OiyrK_tY6egZazQAUI9x0l7hu9g7NWEF4_a4rvir22G5GuhOeIeDYjPbO5zKD87T49uYeqllNv4'
+                ]
+            },
+            'luxury-bed-frame': {
+                name: 'Luxury Bed Frame',
+                price: '$2,450',
+                description: 'Premium solid wood bed frame with an elegant upholstered headboard. Designed for ultimate comfort and style, this king-size bed frame features neutral beige tones that complement any bedroom decor.',
+                features: [
+                    'Premium solid wood construction',
+                    'Elegant upholstered headboard',
+                    'King size dimensions',
+                    'Reinforced slat support system',
+                    'No box spring required',
+                    'Luxurious and comfortable'
+                ],
+                specs: {
+                    'Material': 'Solid Wood & Premium Fabric',
+                    'Dimensions': '84"L x 80"W x 48"H',
+                    'Weight': '150 lbs',
+                    'Color': 'Natural Wood with Beige Upholstery',
+                    'Assembly': 'Assembly required',
+                    'Warranty': '5 years'
+                },
+                images: [
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuAMPCE984xt7i_1eUNqzfYnDEi0Z-g8QDBCyTVjimz3a-9fPCNsqcFxsumHy4IjTalrAU_IG2yZ7Dad3rsH4G2Z6oh4Wq5PBRzI7F_jWvvqd_szeh5ruEUge-HpUBAhvqlAYClGRJw0ZC5bcd8yl6Rsv5rh0QmkIFMth1W3K1TH18OGq_QIEytIekaD57Mbm679AykRQE7J7JRqshcPPPQAnBWbKxhYBZRtwctaYNgHUgh85ftA3Sry8JbJ0MpsYz6nuCCSZB_SvlM',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuAMPCE984xt7i_1eUNqzfYnDEi0Z-g8QDBCyTVjimz3a-9fPCNsqcFxsumHy4IjTalrAU_IG2yZ7Dad3rsH4G2Z6oh4Wq5PBRzI7F_jWvvqd_szeh5ruEUge-HpUBAhvqlAYClGRJw0ZC5bcd8yl6Rsv5rh0QmkIFMth1W3K1TH18OGq_QIEytIekaD57Mbm679AykRQE7J7JRqshcPPPQAnBWbKxhYBZRtwctaYNgHUgh85ftA3Sry8JbJ0MpsYz6nuCCSZB_SvlM',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuAMPCE984xt7i_1eUNqzfYnDEi0Z-g8QDBCyTVjimz3a-9fPCNsqcFxsumHy4IjTalrAU_IG2yZ7Dad3rsH4G2Z6oh4Wq5PBRzI7F_jWvvqd_szeh5ruEUge-HpUBAhvqlAYClGRJw0ZC5bcd8yl6Rsv5rh0QmkIFMth1W3K1TH18OGq_QIEytIekaD57Mbm679AykRQE7J7JRqshcPPPQAnBWbKxhYBZRtwctaYNgHUgh85ftA3Sry8JbJ0MpsYz6nuCCSZB_SvlM',
+                    'https://lh3.googleusercontent.com/aida-public/AB6AXuAMPCE984xt7i_1eUNqzfYnDEi0Z-g8QDBCyTVjimz3a-9fPCNsqcFxsumHy4IjTalrAU_IG2yZ7Dad3rsH4G2Z6oh4Wq5PBRzI7F_jWvvqd_szeh5ruEUge-HpUBAhvqlAYClGRJw0ZC5bcd8yl6Rsv5rh0QmkIFMth1W3K1TH18OGq_QIEytIekaD57Mbm679AykRQE7J7JRqshcPPPQAnBWbKxhYBZRtwctaYNgHUgh85ftA3Sry8JbJ0MpsYz6nuCCSZB_SvlM'
+                ]
             }
         };
 
